# lcc

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  all_alexnet.py  all_alexnet_cc.py  all_alexnet_finetune.py  all_alexnet_lv.py  all_alexnet_trunc.py  all_alexnet_vh.py  all_googlenet.py  all_resnet_trunc.py  all_resnets.py  all_resnets_cc.py  all_resnets_finetune.py  all_resnets_gdv.py  all_resnets_lv.py  all_resnets_sep.py  all_vgg.py  all_vit.py  clean.py  clst_check.ipynb  correct.sh  dd.ipynb  debug.py  demo_finetune.py  demo_validation.py  extract_wall_time.py  finetune.sh  ftlcc.sh  full_dataset.ipynb  icml24.ipynb  index.html  latent_plotting.ipynb  lcc.html  lcc.sh  lolwat.ipynb  manual_analyse_all.py  (+25 more)
.etc/: pypi.yml  setup.py
.github/workflows/: gh-pages.yml
arch/: google-mobilenet_v2_1.0_224.md  google-vit-base-patch16-224.md  microsoft-resnet-18.md  timm-convnext_small.in12k.md  timm-efficientnet_b0.ra_in1k.md  timm-mobilenetv3_small_050.lamb_in1k.md  timm-resnet18.a3_in1k.md  timm-tf_efficientnet_l2.ns_jft_in1k.md  timm-tinynet_e.in1k.md  timm-vgg11.tv_in1k.md
experiments/: _parameters.py  alexnet.py  alexnet_finetune.py  googlenet.py  googlenet_finetune.py  imagenet_finetune.py  nlnas  resnet.py  resnet_finetune.py  test_imagenet.py  vgg.py  vgg_finetune.py  vit.py
lcc/: __main__.py  analysis.html  classifiers.html  correction.html  datasets.html  ema.html  logging.html  plotting.html  plotting.py  training.html  training.py  utils.html  utils.py
lcc/analysis/: __init__.py  analysis.py  dd.py  plotting.py
lcc/classifiers/: __init__.py  base.py  fdlc.py  huggingface.py  timm.py  torchvision.py  utils.py  wrapped.py
lcc/correction/: __init__.py  choice.py  clustering.py  knn.py  louvain.py  peer_pressure.py  utils.py
lcc/correction/loss/: __init__.py  base.py  exact.py  randomized.py
lcc/datasets/: batched_tensor.py  huggingface.py  preset.py  transforms.py  wrapped.py
nlnas/: __init__.py  __main__.py  analysis.py  classifier.py  clustering.py  correct.py  dataset.py  ema.py  finetune.py  imagenet.py  logging.py  nlnas.py  pdist.py  plotting.py  separability.py  tensor_dataset.py  training.py  transforms.py  tv_classifier.py  tv_dataset.py  utils.py
nlnas/analysis/: __init__.py  analysis.py  dd.py  plotting.py
nlnas/classifiers/: __init__.py  base.py  fdlc.py  huggingface.py  timm.py  torchvision.py  utils.py  wrapped.py
nlnas/correction/: __init__.py  choice.py  clustering.py  knn.py  loss.py  louvain.py  targets.py  utils.py
nlnas/correction/loss/: __init__.py  base.py  exact.py  randomized.py
nlnas/datasets/: __init__.py  balanced_batch_sampler.py  batched_tensor.py  emetd_dataloader.py  huggingface.py  preset.py  torchvision.py  transforms.py  utils.py  wrapped.py
old/: alexnet_profile.py  all_alexnet_cc.py  all_alexnet_trunc.py  all_resnet_trunc.py  all_resnets_cc.py  all_resnets_sep.py  balanced_batch_sampler.py  classifier.py  correct.py  datasets-torchvision.py  demo_finetune.py  faiss_vs_cuml.py  finetune.py  gaussian_mixture_plot.py  icml24.ipynb  knn_faiss_vs_cuml.py  knn_faiss_vs_sklearn.py  louvain_sklearn_vs_cuml.py  parallel_knn_graph.py  progressive.ipynb  separability.py  separation_gradient_descent.ipynb  test_batched_louvain.py  test_fabric.py  test_faiss_cpu.py  test_faiss_gpu.py  test_imagenet.py  test_strategy.py  umap_umap_vs_cuml.py  vit.py
old/experiments/: README.md  alexnet.py  googlenet.py  googlenet_finetune.py  vgg.py
