# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example
[project]
    authors = [{ name = "Cédric HO THANH" }]
    dependencies = [
        "click>=8.1.7",
        "datasets[vision]>=3.0.0",
        "loguru>=0.7.2",
        "networkx>=3.3",
        "numpy>=2.1.1",
        "pillow>=10.4.0",
        "pytorch-lightning>=2.4.0",
        "regex>=2024.9.11",
        "safetensors>=0.4.5",
        "scikit-learn>=1.5.2",
        "tensorboard>=2.17.1",
        "timm>=1.0.9",
        "torch>=2.4.1",
        "transformers>=4.44.2",
    ]
    description = "Latent cluster corrections"
    license = { file = "LICENSE" }
    name = "nlnas"
    readme = "README.md"
    requires-python = "==3.11"
    version = "0.0.0"
    [project.urls]
        "Bug Tracker" = "https://github.com/altaris/nlnas/issues"
        Changelog     = "https://github.com/altaris/nlnas/blob/master/CHANGELOG.md"
        Documentation = "https://github.com/altaris/nlnas"
        Homepage      = "https://github.com/altaris/nlnas"
        Repository    = "https://github.com/altaris/nlnas.git"
    [project.optional-dependencies]
        dev = ["huggingface-hub[cli]>=0.25.1", "pdoc>=14.7.0"]
        jupyter = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5"]
        plotting = [
            "bokeh>=3.5.2",
            "matplotlib>=3.9.2",
            "seaborn>=0.13.2",
            "selenium==4.8.2",
        ]
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
    check_untyped_defs     = true
    ignore_missing_imports = true
[tool.pyright]
    include = ["nlnas"]
[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "template.py",
        "venv",
    ]
    line-length = 79
    target-version = "py311"
    [tool.ruff.format]
        docstring-code-format      = true
        docstring-code-line-length = "dynamic"
        indent-style               = "space"
        line-ending                = "auto"
        quote-style                = "double"
        skip-magic-trailing-comma  = false
    [tool.ruff.lint]
        # https://flake8.pycqa.org/en/latest/user/error-codes.html
        # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
        # select = ["E4", "E7", "E9", "F"]
        fixable = ["ALL"]
        ignore = [
            "E722", # Do not use bare `except`
            "E731", # Do not assign a `lambda` expression, use a `def`
            "F401", # `module` imported but unused
            "F403", # `from module import *` used; unable to detect undefined names
            "F405", # `name` may be undefined, or defined from star imports: module
        ]
