# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example
[project]
    authors = [{ name = "Cédric HO THANH" }]
    dependencies = [
        "click>=8.1.7",
        "datasets[vision]>=3.0.0",
        "loguru>=0.7.2",
        "more-itertools>=10.5.0",
        "networkx>=3.3",
        "numpy==1.23",
        "pillow>=10.4.0",
        "pytorch-lightning>=2.4.0",
        "regex>=2024.9.11",
        "safetensors>=0.4.5",
        "scikit-learn>=1.5.2",
        "tensorboard>=2.17.1",
        "timm>=1.0.9",
        "torch>=2.4.1",
        "transformers>=4.44.2",
        "turbo-broccoli>=4.12.2",
    ]
    description = "Latent cluster corrections"
    license = { file = "LICENSE" }
    name = "nlnas"
    readme = "README.md"
    requires-python = "==3.10"
    version = "0.0.0"
    [project.urls]
        "Bug Tracker" = "https://github.com/altaris/nlnas/issues"
        Changelog     = "https://github.com/altaris/nlnas/blob/master/CHANGELOG.md"
        Documentation = "https://github.com/altaris/nlnas"
        Homepage      = "https://github.com/altaris/nlnas"
        Repository    = "https://github.com/altaris/nlnas.git"
    [project.optional-dependencies]
        cuda12 = [
            "cugraph-cu12",
            "cuml-cu12",
            "faiss-gpu>=1.7.2",
            "nx-cugraph-cu12",
        ]
        dev = ["huggingface-hub[cli]>=0.25.1", "pdoc>=14.7.0"]
        jupyter = [
            "ipykernel>=6.29.5",
            "ipywidgets>=8.1.5",
            "jupyter-black>=0.4.0",
        ]
        plotting = [
            "bokeh>=3.5.2",
            "matplotlib>=3.9.2",
            "seaborn>=0.13.2",
            "selenium==4.8.2",
        ]
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
    check_untyped_defs     = true
    ignore_missing_imports = true
[tool.pyright]
    include = ["nlnas"]
[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "template.py",
        "venv",
    ]
    line-length = 79
    target-version = "py311"
    [tool.ruff.format]
        docstring-code-format      = true
        docstring-code-line-length = "dynamic"
        indent-style               = "space"
        line-ending                = "auto"
        quote-style                = "double"
        skip-magic-trailing-comma  = false
    [tool.ruff.lint]
        # https://flake8.pycqa.org/en/latest/user/error-codes.html
        # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
        # select = ["E4", "E7", "E9", "F"]
        fixable = ["ALL"]
        ignore = [
            "E722", # Do not use bare `except`
            "E731", # Do not assign a `lambda` expression, use a `def`
        ]
    [tool.uv.sources]
        cugraph-cu12    = { url = "https://pypi.nvidia.com/cugraph-cu12/cugraph_cu12-24.8.0-cp310-cp310-manylinux_2_28_x86_64.whl" }
        cuml-cu12       = { url = "https://pypi.nvidia.com/cuml-cu12/cuml_cu12-24.8.0-cp310-cp310-manylinux_2_28_x86_64.whl" }
        nx-cugraph-cu12 = { url = "https://pypi.nvidia.com/nx-cugraph-cu12/nx_cugraph_cu12-24.8.0-py3-none-any.whl" }
